crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-later-mutation/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This value was memoized in source but not in compilation output.

error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-later-mutation.ts:19:17
  17 |  */
  18 | function useInputValue(input) {
> 19 |   const object = React.useMemo(() => {
     |                  ^^^^^^^^^^^^^^^^^^^^^
> 20 |     const {value} = transform(input);
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 21 |     return {value};
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 22 |   }, [input]);
     | ^^^^^^^^^^^^^^ Could not preserve existing memoization
  23 |   mutate(object);
  24 |   return object;
  25 | }
